# accumux

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  compile_paper.sh  conandata.yml  conanfile.py  kbn_sum.hpp  verify_fixes.cpp  welford_accumulator.hpp
.claude/: CLAUDE.md
exp/: accumulator_exp.hpp  binary_accumulator_exp.hpp
include/accumux/: accumux.hpp
include/accumux/accumulators/: basic.hpp  covariance.hpp  ema.hpp  histogram.hpp  kbn_sum.hpp  quantile.hpp  welford.hpp
include/accumux/core/: accumulator_concept.hpp  algebra.hpp  composition.hpp  distributed.hpp  serialization.hpp  simd_support.hpp  thread_safe.hpp  variadic_composition.hpp
paper/: PAPER_README.md  accumux_paper.aux  accumux_paper.tex
paper/html/: index.html
tests/: CMakeLists.txt  test_additional_coverage.cpp  test_algebra.cpp  test_basic_accumulators.cpp  test_composition.cpp  test_composition_simple.cpp  test_concepts.cpp  test_distributed.cpp  test_expressions_basic.cpp  test_extended_accumulators.cpp  test_integration.cpp  test_kbn_sum.cpp  test_modern_composition.cpp  test_utility_coverage.cpp  test_variadic_composition.cpp  test_welford_accumulator.cpp
